fix preview table and scrollbar style

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -50,7 +50,8 @@ a {
 
 /* Make the scrollbar look better */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 12px;
+  height: 12px;
 }
 
 ::-webkit-scrollbar-track {
